--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase-admin": "^11.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-svg": "^16.1.30",
     "styled-components": "^6.1.1"
   },
   "devDependencies": {
